# LingoLens

./: .gitattributes  .gitignore  Directory.Build.props  Directory.Packages.props  LICENSE  LingoLens.slnx  README.md  THIRD-PARTY-NOTICES.md
.github/workflows/: build.yml  release.yml
docs/: MODELS.md  RUNNING.md
docs/plans/: 2026-06-20-lingolens-design.md
experiments/rust-overlay/: Cargo.toml  README.md
experiments/rust-overlay/src/: main.rs  overlay.rs  protocol.rs
src/LingoLens.App/: App.xaml  App.xaml.cs  LingoLens.App.csproj  app.manifest  appsettings.json
src/LingoLens.Capture/: CaptureFrame.cs  CaptureServiceCollectionExtensions.cs  CaptureSourceFactory.cs  DeviceResources.cs  DxgiDuplicationCaptureSource.cs  LingoLens.Capture.csproj  RegionCaptureSource.cs  TileHashChangeDetector.cs  WgcCaptureSource.cs
src/LingoLens.Compute/: ComputeDeviceManager.cs  ComputeServiceCollectionExtensions.cs  DxgiAdapterEnumerator.cs  GpuInfo.cs  LingoLens.Compute.csproj  OrtProviderProbe.cs
src/LingoLens.Core/: Geometry.cs  LingoLens.Core.csproj
src/LingoLens.Ocr/: LingoLens.Ocr.csproj  OcrEngineSelector.cs  OcrModelBundles.cs  OcrServiceCollectionExtensions.cs  PaddleOcrV5Engine.cs  WindowsMediaOcrEngine.cs
src/LingoLens.Overlay/: LingoLens.Overlay.csproj  OverlayServiceCollectionExtensions.cs
src/LingoLens.Pipeline/: IUiDispatcher.cs  LingoLens.Pipeline.csproj  PipelineServiceCollectionExtensions.cs  TranslationPipeline.cs
src/LingoLens.Translation/: CachingTranslator.cs  LingoLens.Translation.csproj  OpusMtTranslator.cs  Qwen3Translator.cs  (+2 more)
(+57 files in other folders)
